--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+    <h1> Matheus Drago 1A</h1>
+    <p> House Of The Dragon é a série spin off de Game Of Thrones,se passando dois séculos antes dos acontecimentos GOT,a trama da série é recheada de aventura,suspense,traições e muto mais.</p>
+    <p>Muitos assuntos importantes e citações do passado também são mencionados na série como a <strong> PERDIÇÂO DE VALÌRIA E AEAGON TARGARYEN O CONQUISTADOR.</strong> e agora que na segunda temporda o norte e os STARK foram adicianos,sera que teremos White Walkers e o mistérios do norte outra vez??</p>
+
+    <h3> Dragões da Série:  </h3>
+
+<l1>SYRAX</l1>
+<l1>CARAXES</l1>
+<L1>VHAGAR</L1>
+<l1>MELEYS</l1>
+<L1>SEASMOKE</L1>
+
     
 </body>
 </html>
